<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uwb_sar</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="arms@todo.todo">arms</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>nlink_parser_ros2_interfaces</build_depend>
  
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>nlink_parser_ros2_interfaces</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
